error handling code added for recorded video

--- a/xgds_video/static/xgds_video/style/xgds_video.css
+++ b/xgds_video/static/xgds_video/style/xgds_video.css
@@ -1,5 +1,6 @@
 /* css for xgds_video */
 
+/*
 #sliderGroup {
     padding:8px;
     background:#CACACA;
@@ -48,4 +49,4 @@
 
 .stylish {
     font-family: FontAwesome;
-}
+}*/
