some error messages and small changes

--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -36,6 +36,8 @@
 {% endblock %}
 
 {% block jsInit %}
+    var $container = $('#container');
+    $container.masonry('bindResize')
 {% endblock %}
 </script>
 
