--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -4,6 +4,11 @@
  <script src="{{ STATIC_URL }}jquery/js/jquery.js" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}javascript/AC_QuickTime.js" language="javascript" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}jquery/js/masonry.pkgd.min.js" type="text/javascript"></script>
+ <script type="text/javascript" src="{{STATIC_URL}}external/js/jquery-ui-1.8.18.custom.js"></script>
+ <script type="text/javascript" src="{{STATIC_URL}}external/js/jquery.tagsinput.js"></script>
+ <script src="{{STATIC_URL}}jquery/js/jquery.form.min.js" type="text/javascript" ></script>
+ <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
+ <script type="text/javascript" src="{{STATIC_URL}}xgds_video/js/video_notes_form.js"></script>
 {% endblock headExtras %}
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
@@ -74,28 +79,22 @@ var maxWidth = getMaxWidth();
 
 {% block cssExtras %}
  {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery-ui.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery.tagsinput.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}style/jquery-ui-1.8.18.custom.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}jquery/css/jquery-ui.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery-ui-1.8.18.custom.css"></link>
 {% endblock cssExtras %}
 
-{% block scripts %}
- {{ block.super }}
- <script src="{{STATIC_URL}}jquery/js/jquery.form.min.js" type="text/javascript" ></script>
- <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
-<script type="text/javascript" src="{{STATIC_URL}}xgds_video/js/video_notes_form.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}javascript/jquery-ui-1.8.18.custom.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}javascript/jquery.tagsinput.js"></script>
-{% endblock scripts %}
-
 {% block jsInit %}
+/*
 //prepare the form when the DOM is ready 
 $(document).ready(function() { 
 	// bind form using 'ajaxForm' 
 	{% for feed, form in videoFeedData %}
+	alert("binding form {{ feed }}")
     $('#create_note{{ form.index }}').ajaxForm(options);
     {% endfor %}
 }); 
+*/
 {% endblock jsInit %}
 
 
