--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -1,7 +1,12 @@
 {% with form=data %}
 <div style="float:left; padding-top:2px; padding-bottom:2px; ">
+<!-- 
+<form id="create_note{{ form.index }}" action="" method="POST">
+{{ form.as_p }}
+ <input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
+</form>
+-->
 	<form id="create_note{{ form.index }}" action="" method="POST">
-	{{form.extras}}
 		<input type="hidden" id="id_index" value="{{form.index}}"/>
 		<input type="hidden" id="id_extras" value="{{form.extras}}"/>
         <input type="hidden" id="id_event_time" value="{{form.event_time.value}}"/>
@@ -12,6 +17,6 @@
         <label for="id_tag">Tags:</label>
         {{ form.tags }}
      <input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
-</form>
+  </form>
 </div>
 {% endwith %}
