--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -1,16 +1,15 @@
 {% extends "base.html" %}
-{% load url from future %}
 {% block headExtras %}
 {{block.super}}
- <script src="{{ STATIC_URL }}jquery/js/jquery.js" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}javascript/AC_QuickTime.js" language="javascript" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}jquery/js/masonry.pkgd.min.js" type="text/javascript"></script>
- <script type="text/javascript" src="{{STATIC_URL}}external/js/jquery-ui-1.8.18.custom.js"></script>
- <script type="text/javascript" src="{{STATIC_URL}}external/js/jquery.tagsinput.js"></script>
+ <script src="{{ STATIC_URL }}jquery/js/jquery.js" type="text/javascript"></script>
+ <script src="{{STATIC_URL}}external/js/jquery-ui-1.8.18.custom.js" type="text/javascript" ></script>
+ <script src="{{STATIC_URL}}external/js/jquery.tagsinput.js" type="text/javascript" ></script>
  <script src="{{STATIC_URL}}external/js/jquery.form.min.js" type="text/javascript" ></script>
  <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
- <script type="text/javascript" src="{{STATIC_URL}}xgds_video/js/video_notes_form.js"></script>
-{% endblock headExtras %}
+ <script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
+ {% endblock headExtras %}
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
     {% block nav %}
@@ -79,7 +78,24 @@ var maxWidth = getMaxWidth();
 {% endblock %}
 
 {% block scripts %}
-<script type="text/javascript" src="{{ STATIC_URL }}/xgds_video/js/video_notes_form.js"></script>
-{% endblock %}
+{% endblock scripts %}
+
+
+{% block cssExtras %}
+ {{ block.super }}
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}jquery/css/jquery-ui.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery-ui-1.8.18.custom.css"></link>
+{% endblock cssExtras %}
+
+{% block jsInit %}
+//prepare the form when the DOM is ready 
+$(document).ready(function() { 
+	// bind form using 'ajaxForm' 
+	{% for feed, form in videoFeedData %}
+    $('#create_note{{ form.index }}').ajaxForm(options);
+    {% endfor %}
+}); 
+{% endblock jsInit %}
 
 
