--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -1,25 +1,16 @@
 {% with form=data %}
-<div style="float:left; padding-top:2px; padding-bottom:2px;">
+<div style="float:left; padding-top:2px; padding-bottom:2px;" >
 	<form id="create_note{{ form.index }}" action="" method="POST">
-		<input type="hidden" id="id_index" value="{{ form.index }}"/>
-        <input type="hidden" id="id_extras" value="{{ form.extras }}"/>
-        <input type="hidden" id="id_eventTie" value="now"/>
         <label for="id_content">Note:</label>
-        <input id="id_content" type="text" name="content" maxlength="500" size="20"/>
+        <input id="id_content" type="text" name="content" maxlength="500" size="20">
         <label for="id_label">Label:</label>
         {{ form.label }}
         <label for="id_tag">Tags:</label>
         {{ form.tags }}
-     <input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
+     	<input type="hidden" id="id_index" value="{{ form.index }}" >
+     	{{ form.extras }}
+        <input type="hidden" id="id_event_time" value="{{ form.event_time.value }}" >
+        <input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
   </form>
 </div>
 {% endwith %}
-
-{#% block scripts %#}
-<!-- 
-<script type="text/javascript">var submitNoteUrl = "{% url 'record_simple' %}";</script>
-<script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery.form.min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}javascript/jquery-ui-1.8.18.custom.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}javascript/jquery.tagsinput.js"></script>
- -->
- {#% endblock scripts %#}
