--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}jquery/js/jquery.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}jquery/js/jquery-ui.js"></script>
     <link rel="stylesheet" href="{{ STATIC_URL }}jquery/css/jquery-ui.css"/>
-    <link rel="stylesheet" href="{{ STATIC_URL }}style/xgds_video.css"/>
+    <link rel="stylesheet" href="{{ STATIC_URL }}xgds_video/style/xgds_video.css"/>
     
     <script src="{{ STATIC_URL }}/external/foundation-5.0.2/js/foundation/foundation.js"></script>
     <script src="{{ STATIC_URL }}/external/foundation-5.0.2/js/foundation/foundation.alert.js"></script>
