--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -4,7 +4,7 @@
  <script src="{{ STATIC_URL }}javascript/AC_QuickTime.js" language="javascript" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}jquery/js/masonry.pkgd.min.js" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}jquery/js/jquery.js" type="text/javascript"></script>
- <script src="{{STATIC_URL}}external/js/jquery-ui-1.8.18.custom.js" type="text/javascript" ></script>
+ <script src="{{STATIC_URL}}external/js/jquery-ui.js" type="text/javascript" ></script>
  <script src="{{STATIC_URL}}external/js/jquery.tagsinput.js" type="text/javascript" ></script>
  <script src="{{STATIC_URL}}external/js/jquery.form.min.js" type="text/javascript" ></script>
  <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
@@ -85,49 +85,11 @@ var maxWidth = getMaxWidth();
  {{ block.super }}
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}jquery/css/jquery-ui.css"></link>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery.tagsinput.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery-ui-1.8.18.custom.css"></link>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}xgds_video/style/xgds_video.css"></link>
 {% endblock cssExtras %}
 
 {% block jsInit %}
-//prepare the form when the DOM is ready 
-$(document).ready(function() { 
-	{% for feed, form in videoFeedData %}
-	
-	   // bind form using 'ajaxForm' 
-       $('#create_note{{ form.index }}').ajaxForm(options);
-       
-       // bind the fancy tags for each form
-	    $('form#create_note{{ form.index }} #id_tags').tagsInput({
-		    width: '200px',
-		    height: '12px',
-		    autocomplete_url: '{% url note_tags_list %}'
-			});
-			
-		$('#id_tags_tag').blur(function(e) {
-		    if (! $(this).data('autocomplete_active')) {
-		        if ($(this).attr('value') && $(this).attr('value') != 'add a tag') {
-		            $('form#create_note{{ form.index }} #id_tags').addTag($(this).attr('value'));
-		        }
-		    }
-		});
-
-    {% endfor %}
-    
-    $('#page-content').on(
-	    'autocompletefocus',
-	    'input.ui-autocomplete-input',
-	    function() {
-	        $(this).data('autocomplete_active', true);
-	    }
-	).on(
-	    'autocompleteclose',
-	    'input.ui-autocomplete-input',
-	    function() {
-	        $(this).data('autocomplete_active', false);
-	    }
-);
-}); 
+{% include "xgds_video/init_notes.js" with data=videoFeedData %}
 {% endblock jsInit %}
 
 
