recorded video refacting to play multiple segments per source using playlists. Need to debug more

--- a/xgds_video/static/xgds_video/style/xgds_video.css
+++ b/xgds_video/static/xgds_video/style/xgds_video.css
@@ -40,8 +40,6 @@ div.tagsinput[style]{
     height: 24px !important;
 }
     
-
-/*
 #sliderGroup {
     padding:8px;
     background:#CACACA;
@@ -90,4 +88,4 @@ div.tagsinput[style]{
 
 .stylish {
     font-family: FontAwesome;
-}*/
+}
