--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -1,15 +1,26 @@
 {% extends "base.html" %}
 {% block headExtras %}
 {{block.super}}
+<script src="{{ STATIC_URL }}external/js/jquery/jquery.js" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}external/js/AC_QuickTime.js" language="javascript" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" type="text/javascript"></script>
- <script src="{{ STATIC_URL }}external/js/jquery/jquery.js" type="text/javascript"></script>
+ {% endblock headExtras %}
+ 
+ {% block cssExtras %}
+ {{ block.super }}
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery-ui.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}xgds_video/css/xgds_video.css"></link>
+{% endblock cssExtras %}
+
+{% block scripts %}
  <script src="{{STATIC_URL}}external/js/jquery/jquery-ui.js" type="text/javascript" ></script>
  <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
  <script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
  <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
  <script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
- {% endblock headExtras %}
+ {% endblock scripts %}
+
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
     {% block nav %}
@@ -77,19 +88,8 @@ var maxWidth = getMaxWidth();
 </div>
 {% endblock %}
 
-{% block scripts %}
-{% endblock scripts %}
-
-
-{% block cssExtras %}
- {{ block.super }}
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery-ui.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery.tagsinput.css"></link>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}xgds_video/css/xgds_video.css"></link>
-{% endblock cssExtras %}
-
 {% block jsInit %}
-{% include "xgds_video/init_notes.js" with data=videoFeedData %}
+{# include "xgds_video/init_notes.js" with data=videoFeedData #}
 {% endblock jsInit %}
 
 
