working on improving tags, the first one works, second one does not

--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -33,6 +33,7 @@ div.tagsinput {
 	display: inline-block;
 	vertical-align: top;
 	height: 24px !important;
+	width: 150px !important;
 }
 
 div.tagsinput[style]{
