--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -4,6 +4,11 @@
 <script src="{{ STATIC_URL }}external/js/jquery/jquery.js" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}external/js/AC_QuickTime.js" language="javascript" type="text/javascript"></script>
  <script src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" type="text/javascript"></script>
+  <script src="{{STATIC_URL}}external/js/jquery/jquery-ui.js" type="text/javascript" ></script>
+ <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
+ <script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
+ <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
+ <script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
  {% endblock headExtras %}
  
  {% block cssExtras %}
@@ -14,11 +19,6 @@
 {% endblock cssExtras %}
 
 {% block scripts %}
- <script src="{{STATIC_URL}}external/js/jquery/jquery-ui.js" type="text/javascript" ></script>
- <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
- <script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
- <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
- <script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
  {% endblock scripts %}
 
 {% load nav %}
@@ -89,7 +89,7 @@ var maxWidth = getMaxWidth();
 {% endblock %}
 
 {% block jsInit %}
-{# include "xgds_video/init_notes.js" with data=videoFeedData #}
+{% include "xgds_video/init_notes.js" with data=videoFeedData %}
 {% endblock jsInit %}
 
 
