FINALLY got this WORKING for multiple forms!

--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -3,7 +3,8 @@
 	<form id="create_note{{ form.index }}" action="" method="POST">
 		<label for="id_content">Note:</label><input id="id_content" type="text" name="content" maxlength="500" size="20">
         <label for="id_label">Label:</label>{{ form.label }}
-        <label for="id_tags">Tags:</label>{{ form.tags }}
+        <label for="id_tags">Tags:</label>
+        <input id="id_tags{{ form.index }}" type="text" class="tags" />
 		<input type="hidden" id="id_index" value="{{ form.index }}" >
      	{{ form.extras }}
         <input type="hidden" id="id_event_time" value="{{ form.event_time.value }}" >
