working on adding notes to the recorded video; not quite done but stuff is showing up

--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -89,7 +89,7 @@ var maxWidth = getMaxWidth();
 {% endblock %}
 
 {% block jsInit %}
-{% include "xgds_video/init_notes.js" with data=videoFeedData %}
+{% include "xgds_video/init_notes.js" %}
 {% endblock jsInit %}
 
 
