--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -1,4 +1,33 @@
 {% extends "base.html" %}
+{% block headExtras %}
+{{block.super}}
+    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.js"></script>
+    <!-- <script src="{{ STATIC_URL }}/external/js/foundation/foundation.js"></script>
+    <script src="{{ STATIC_URL }}/external/js/foundation/foundation.alert.js"></script>
+ -->
+    
+    <script type="text/javascript" src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" ></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jwplayer/jwplayer.js"></script>
+    <script type="text/javascript">STATIC_URL='{{ STATIC_URL }}'</script>
+    <script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/activeVideoSegments.js"></script>
+    <script type="text/javascript">jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";</script>
+    <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
+ 	<script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
+ 	<script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
+ 	<script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
+{% endblock headExtras %}
+
+ {% block cssExtras %}
+ {{ block.super }}
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery.tagsinput.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/jquery/jquery-ui.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}xgds_video/css/xgds_video.css"></link>
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/font-awesome/css/font-awesome.css"></link>
+<!-- <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}external/css/bootstrap-combined.no-icons.min.css"></link>
+ -->
+{% endblock cssExtras %}
+
 {% load url from future %}
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
@@ -10,37 +39,6 @@
     {% block sitemenu-content-secondary %}
 	{% include "xgds_video/video_subnav.html" %}
     {% endblock %}
-
-{% block headExtras %}
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jquery/jquery-ui.js"></script>
-    <link rel="stylesheet" href="{{ STATIC_URL }}external/css/jquery/jquery-ui.css"/>
-    <link rel="stylesheet" href="{{ STATIC_URL }}xgds_video/css/xgds_video.css"/>
-    
-    <script src="{{ STATIC_URL }}/external/js/foundation/foundation.js"></script>
-    <script src="{{ STATIC_URL }}/external/js/foundation/foundation.alert.js"></script>
-
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/masonry.pkgd.min.js" ></script>
-    
-    <script type="text/javascript" src="{{ STATIC_URL }}external/js/jwplayer/jwplayer.js"></script>
-    <script type="text/javascript">
-    STATIC_URL='{{ STATIC_URL }}'</script>
-    <script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/activeVideoSegments.js"></script>
-    <script type="text/javascript">jwplayer.key="Wu88H+wZ8jZd7qICLr7IEKSmml1/EOMXWYcblA/CJVk=";</script>
-
-{% endblock headExtras %}
-
-<script type="text/javascript">
-{% block jsSetVars %}
-{% endblock %}
-
-{% block jsInit %}
-{% endblock %}
-</script>
-
 {% block contents %}
 
     {% if messages %}
@@ -87,9 +85,7 @@
                     {% endif %}
                     {% endwith %}
                 </div>
-                <br>	
-                <br>
-                
+                {% include "xgds_video/video_notes.html" with data=source.form %}
                 <!--embed the video-->
                 <div id="myPlayer{{ source.shortName }}"></div>
                 <br>
@@ -167,3 +163,7 @@
     {% endif %}
 
 {% endblock contents %}
+
+{% block jsInit %}
+{% include "xgds_video/init_notes.js" %}
+{% endblock jsInit %}
