--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -103,7 +103,8 @@
 
             <script language="javascript" type="text/javascript">
                 var baseUrl = "{{ baseUrl }}";
-               
+                var STATIC_URL = "{{ STATIC_URL }}";
+
                 //helper for converting json datetime object to javascript date time
                 function toJsDateTime(jsonDateTime) {
                     if (jsonDateTime) {
