work in progress of adding notes to recorded video

--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -28,6 +28,9 @@
  -->
 {% endblock cssExtras %}
 
+{% block scripts %}
+{% endblock %}
+    
 {% load url from future %}
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
