--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -7,7 +7,11 @@
   <script src="{{STATIC_URL}}external/js/jquery/jquery-ui.js" type="text/javascript" ></script>
  <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
  <script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
- <script type="text/javascript">var submitNoteUrl = '{% url record_simple %}'</script>
+  <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
+  <script type="text/javascript">
+    var submitNoteUrl = '{% url record_simple %}';
+ 	var maxWidth = getMaxWidth({{videoFeedData|length}})
+</script>
  <script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
  {% endblock headExtras %}
  
@@ -33,40 +37,8 @@
     {% endblock %}
 	
 {% block contents %}
-
-<script language="javascript" type="text/javascript">
-function getMaxWidth() {
-	  var width = window.innerWidth ||
-    			  document.documentElement.clientWidth ||
-    			  document.body.clientWidth;
-	  {% if videoFeedData|length > 1 %}
-	  			width = Math.round(width/2);
-	  {% endif %}
-	  
-	  width = width - 100;
-	  return width;
-}
-
-function calculateSize(newWidth, defaultHeight, defaultWidth) {
-	 var resultHeight = defaultHeight;
-	 var resultWidth = newWidth;
-	 // the default size of the video is bigger than the new size so we have to scale up.
-    if (defaultWidth > newWidth){
-        ratio = newWidth / defaultWidth
-        resultHeight = Math.round(defaultHeight * ratio)
-        resultWidth = Math.round(defaultWidth * ratio)
-    } else if (newWidth > defaultWidth) {
-   	 // the default size of the video is bigger than the new size so we have to cap it
-        resultHeight = defaultHeight
-        resultWidth = defaultWidth
-    }
-    return [resultWidth, resultHeight];
-}
-
-var maxWidth = getMaxWidth();
-</script>
-
 <div id="container" class="js-masonry" data-masonry-options='{  "itemSelector": ".item", "gutter":5}'>
+
 {% for feed, form in videoFeedData %}
 <script language="javascript" type="text/javascript">
 	  var size = calculateSize(maxWidth, {{ feed.settings.height }}, {{ feed.settings.width  }});
