working on time for video notes

--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -85,7 +85,7 @@
 	                    {% endwith %}
 	                </div>
 					<section>
-	                {% include "xgds_video/video_notes.html" with data=source.form %}
+	                {% include "xgds_video/video_notes.html" with data=source.form source=source.name %}
 	                </section>
 	                <!--embed the video-->
 	                <section>
