--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -8,6 +8,7 @@
 		<input type="hidden" id="id_index" value="{{ form.index }}" >
      	{{ form.extras }}
         <input type="hidden" id="id_event_time" value="{{ form.event_time.value }}" >
+        <input type="hidden" id="source" value="{{ source }}" >
         <input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
   </form>
 </div>
