--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -10,7 +10,8 @@
   <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   <script type="text/javascript">
     var submitNoteUrl = '{% url record_simple %}';
- 	var maxWidth = getMaxWidth({{videoFeedData|length}})
+ 	var maxWidth = getMaxWidth({{videoFeedData|length}});
+ 	var isLive = true;
 </script>
  <script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
  {% endblock headExtras %}
