tuning video css for feeds and live

--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -79,15 +79,15 @@ div.tagsinput[style]{
 	float:left;
 }
 
-#toprow-left{
+.toprow-left{
     float:left;
 }
 
-#toprow-right{
+.toprow-right{
     float:right;
 }
 
-#buttons{
+.buttons{
     display:block;
 }
 
