--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -44,19 +44,21 @@
 <script language="javascript" type="text/javascript">
 	  var size = calculateSize(maxWidth, {{ feed.settings.height }}, {{ feed.settings.width  }});
 </script>
-<div class="item" id="item{{ forloop.counter }}" style="background:#CACACA;  margin-bottom: 5px; padding: 8px;border-style:solid; border-width:2px;">
-	<div style="float:left; text-align: left"><b>Live feed: {{ feed.name }}</b></div>
-	<div style="float:right; text-align: right; padding-bottom:3px;"><a class="mybutton" href="{% url xgds_video_live feed.shortName %}">New Window</a>&nbsp;&nbsp;
-		<a class="mybutton" href="{% url xgds_video_recorded %}?source={{ feed.source.shortName }}">Recorded</a></div>
-	{% include "xgds_video/video_notes.html" with data=form source=feed.source.shortName %}
-	<script language="javascript" type="text/javascript">
-	  $("#item{{ forloop.counter }}").css({"width":size[0],"height":size[1]+100}); 
-	  QT_WriteOBJECT('https://plrp.xgds.org/static/{{ feed.name }}Stream.mov',  '100%', /* feedHeight */'100%', '', 'AUTOPLAY',
-	                 'True', 'qtsrc', '{{ feed.url }}', 'AutoHREF', 'True', 'SCALE', 'Aspect', 'EnableJavaScript', 'True', 'Controller', 'False', 'TARGET', 'Myself',
-	                 'emb#NAME' , 'movie{{ forloop.counter }}');
-	</script>
-	
-</div>
+ <div class="item" id="item{{ forloop.counter }}">
+	     <div class="buttons">
+	     	<div class="toprow-left"><b>Live feed: {{ feed.name }}</b></div>
+	     	<a class="mybutton toprow-right" href="{% url xgds_video_recorded %}?source={{ feed.source.shortName }}">Recorded</a>
+	     </div>
+	     <section>
+	     {% include "xgds_video/video_notes.html" with data=form source=feed.source.shortName %}
+	     </section>
+	     <script language="javascript" type="text/javascript">
+		  $("#item{{ forloop.counter }}").css({"width":size[0],"height":size[1]+100}); 
+		  QT_WriteOBJECT('https://plrp.xgds.org/static/{{ feed.name }}Stream.mov',  '100%', /* feedHeight */'100%', '', 'AUTOPLAY',
+		                 'True', 'qtsrc', '{{ feed.url }}', 'AutoHREF', 'True', 'SCALE', 'Aspect', 'EnableJavaScript', 'True', 'Controller', 'False', 'TARGET', 'Myself',
+		                 'emb#NAME' , 'movie{{ forloop.counter }}');
+		</script>
+</div> <!-- item -->
 {% endfor %}
 </div>
 {% endblock %}
