refactored updateValues to have multi-segment player drive the masterSlider, not the other way around

--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -69,7 +69,7 @@
                     </div>
                     <div>
                         <input  id="seekTime" type="text" name="text-input" placeholder="&#xf017; play from time (HH:MM:SS)" class="stylish"/>
-                        <button type="submit" class="mybutton" id="seekButton" onclick=seekToTime()>
+                        <button type="submit" class="mybutton" id="seekButton" onclick=seekCallBack()>
                             <i class="fa fa-share"></i> Seek
                         </button>
                     </div>
